--- a/auto/auto.vcxproj.filters
+++ b/auto/auto.vcxproj.filters
@@ -15,14 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="auto.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="01_auto.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="02_auto.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="03_auto.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="01_auto.md" />
+    <None Include="02_auto.md" />
   </ItemGroup>
 </Project>
