--- a/auto/auto.vcxproj
+++ b/auto/auto.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{289cd31c-a06b-4ec8-be2c-e1991761b2e7}</ProjectGuid>
     <RootNamespace>auto</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>01_auto</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
