--- a/template_type/template_type.vcxproj
+++ b/template_type/template_type.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{3c128806-c460-4836-9333-c07585b0bce0}</ProjectGuid>
     <RootNamespace>templatetype</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>05_template_type</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
