--- a/smartPointer/smartPointer.vcxproj
+++ b/smartPointer/smartPointer.vcxproj
@@ -77,6 +77,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -103,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -124,10 +126,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="smartPointer.cpp" />
+    <ClCompile Include="shared_ptr.cpp" />
+    <ClCompile Include="unique_ptr.cpp" />
+    <ClCompile Include="weak_ptr.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="smartPointer.md" />
+    <None Include="shared_ptr.md" />
+    <None Include="unique_ptr.md" />
+    <None Include="weak_ptr.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
